microservices-chart/templates/tasks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-service
spec:
  selector:
    app: tasks-service
  ports:
    - port: 8002
      targetPort: 8002
